Modulo médico actualizado y Modulo Especialista

--- a/backend/app/src/main/resources/application.properties
+++ b/backend/app/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=app
 
-spring.datasource.url=${MEDICITAS_DB_URL}
+spring.datasource.url=jdbc:mysql://localhost:3307/medicitas
 spring.datasource.username=${MEDICITAS_DB_USERNAME}
 spring.datasource.password=${MEDICITAS_DB_PASSWORD}
 
